# enchant

./: .appveyor.yml  .cvsignore  .dir-locals.el  .gitattributes  .gitignore  .gitmodules  .travis.yml  .uncrustify.cfg  AUTHORS  BUGS  COPYING.LIB  ChangeLog  Doxyfile  Doxyfile.in  HACKING  Makefile.am  NEWS  README  README.md  TODO  appveyor.yml  autogen.sh  bootstrap  bootstrap.conf  configure.ac  configure.in  doxygen.conf  enchant-uninstalled.pc.in  enchant.pc.in  enchant.spec.in  index.html  libenchant.spec.in  lt-compile-resource  readme_hyphenation
lib/: .gitignore  Makefile.am  api.vala  broker.vala  composite.vala  config.vapi  configmake.vapi  dict.vala  enchant++.h  enchant-provider.h  enchant.5.in.in  enchant.h  enchant.html  enchant.ordering  internal.vapi  libenchant.rc.in  provider-dict.vala  provider.vala  pwl.h  pwl.vala  session.vala  util.vala
program-tests/: .gitignore  Makefile.am  en.aff  en.dic  en_GB.dic  list-dicts.sh  misspelled-input-expected.txt  misspelled-input.sh  misspelled-input.txt  run-enchant-lsmod.sh  run-test  unknown-option-expected.txt  unknown-option.sh  zero-arguments-expected.txt  zero-arguments.sh
providers/: AppleSpell.config  Makefile.am  applespell_checker.mm  enchant_aspell.c  enchant_aspell.vala  enchant_hspell.c  enchant_hunspell.cpp  enchant_nuspell.cpp  enchant_uspell.cpp  enchant_voikko.c  enchant_win8.cpp  enchant_winspell.cpp  enchant_zemberek.cpp  libenchant_hunspell.rc  uspell_provider.cpp  zemberek.cpp  zemberek.h
src/: .cvsignore  .editorconfig  .gitignore  Makefile.am  backends_readme  broker.vala  composite_provider.c  composite_provider.h  config.h.win32  config.vapi  debug.h  enchant++.cpp  enchant++.h  enchant-2.html  enchant-2.vapi  enchant-3.html  enchant-ispell.c  enchant-lsmod-2.html  enchant-lsmod-3.html  enchant-lsmod.1  enchant-lsmod.1.in  enchant-lsmod.c  enchant-lsmod.vala  enchant-provider.h  enchant.1  enchant.1.in  enchant.5.in  enchant.5.in.in  enchant.c  enchant.h  enchant.html  enchant.i  enchant.ordering  enchant.vala  enchant_cocoa.h  enchant_cocoa.m  glib-2.0.vapi  gnu.vapi  internal.vapi  lib.c  (+10 more)
src/applespell/: AppleSpell.config  Makefile.am  applespell_checker.h  applespell_checker.mm
src/aspell/: .cvsignore  Makefile.am  README  aspell_provider.c
src/chinese/: chinese_provider.c
src/hspell/: .cvsignore  Makefile.am  README  hspell_provider.c
src/hunspell/: Makefile.am  README  hunspell_checker.cpp
src/ispell/: .cvsignore  HyphenationRule.cpp  HyphenationRule.h  HyphenationTree.cpp  HyphenationTree.h  Hyphenator.cpp  Hyphenator.h  Language.cpp  Language.h  Makefile.am  README  correct.cpp  good.cpp  hash.cpp  hyphenate.cpp  hyphenate.h  ispell.cpp  ispell.h  ispell_checker.cpp  ispell_checker.h  ispell_def.h  lookup.cpp  makedent.cpp  msgs.h  sp_spell.h  tgood.cpp
src/myspell/: .cvsignore  AUTHORS  COPYING  COPYING.LGPL  COPYING.MPL  ChangeLog  Makefile.am  aclocal.m4  affentry.cxx  affentry.hxx  affixmgr.cxx  affixmgr.hxx  atypes.hxx  baseaffix.hxx  checkme.lst  config.guess  config.sub  configure  configure.in  csutil.cxx  csutil.hxx  depcomp  dictmgr.cxx  example.c  filemgr.cxx  hashmgr.cxx  hashmgr.hxx  hnjalloc.c  hnjalloc.h  htypes.hxx  hunspell.cxx  hunspell.h  hunspell.hxx  hunzip.cxx  hunzip.hxx  hyph_en_US.dic  hyphen.c  hyphen.h  hyphen.patch  hyphen.tex  (+14 more)
src/test-files/: misspelled-input.txt  misspelled-input_expected.txt
src/uspell/: .cvsignore  Makefile.am  README  uspell_provider.cpp
src/voikko/: Makefile.am  voikko_provider.c
src/zemberek/: Makefile.am  zemberek.cpp  zemberek.h  zemberek_provider.cpp
tests/: .cvsignore  .gitignore  EnchantBrokerTestFixture.h  EnchantDictionaryTestFixture.h  EnchantTestFixture.h  Makefile.am  asan-suppressions.txt  composite.test.c  enchant-composite.test.c  enchant-ispell.c  enchant-lsmod.c  enchant.test.c  enchantxx.test.cpp  ispell  ispell.in  main.test.cpp  mock_provider.cpp  mock_provider.h  run-test  test-enchant-composite.c  test-enchant.c  test-enchantxx.cpp  test.pwl  test.pwl.orig
tests/broker/: describe.cpp  dict_exists.cpp  dict_exists.i  enchant_broker_describe_tests.cpp  enchant_broker_dict_exists_tests.cpp  enchant_broker_dict_exists_tests.i  enchant_broker_free_dict_tests.cpp  enchant_broker_free_tests.cpp  enchant_broker_get_error_tests.cpp  enchant_broker_init_tests.cpp  enchant_broker_list_dicts_tests.cpp  enchant_broker_request_dict_tests.cpp  enchant_broker_request_dict_with_pwl_tests.cpp  enchant_broker_request_pwl_dict_tests.cpp  enchant_broker_set_ordering_tests.cpp  free.cpp  free_dict.cpp  get_error.cpp  list_dicts.cpp  request_dict.cpp  request_dict_with_pwl.cpp  request_pwl_dict.cpp  set_ordering.cpp
tests/dictionary/: add.cpp  add.i  add_to_session.cpp  add_to_session.i  check.cpp  check.i  describe.cpp  describe.i  enchant_dict_add_tests.cpp  enchant_dict_add_to_session_tests.cpp  enchant_dict_add_to_session_tests.i  enchant_dict_check_tests.cpp  enchant_dict_check_tests.i  enchant_dict_describe_tests.cpp  enchant_dict_describe_tests.i  enchant_dict_free_string_list_tests.cpp  enchant_dict_get_error_tests.cpp  enchant_dict_get_extra_word_characters_tests.cpp  enchant_dict_is_added_tests.cpp  enchant_dict_is_removed_tests.cpp  enchant_dict_is_word_character_tests.cpp  enchant_dict_remove_from_session_tests.cpp  enchant_dict_remove_tests.cpp  enchant_dict_store_replacement_tests.cpp  enchant_dict_suggest_tests.cpp  free_string_list.cpp  get_error.cpp  get_extra_word_characters.cpp  is_added.cpp  is_removed.cpp  is_word_character.cpp  remove.cpp  remove_from_session.cpp  remove_from_session.i  suggest.cpp  suggest.i
tests/enchant_providers/: .gitignore  Makefile.am  providers.test.cpp  unittest_enchant_providers.h
tests/mock_provider/: Makefile.am
tests/provider/: broker_set_error.cpp  dict_set_error.cpp  dict_set_error.i  enchant_provider_broker_set_error_tests.cpp  enchant_provider_dict_set_error_tests.cpp  get_prefix_dir.cpp  (+2 more)
tests/pwl/: pwl.cpp  (+2 more)
unittests/: .gitignore  EnchantBrokerTestFixture.h  EnchantDictionaryTestFixture.h  EnchantTestFixture.h  Makefile.am  Readme.txt  main.cpp
(+838 files in other folders)
